# metaserver

./: .gitignore  BlockingQueue.h  CMakeLists.txt  DataBase.cpp  DataBase.h  DatabaseConnection.cpp  DatabaseConnection.h  main.cpp
metaserver/: PlayerRepository.cpp  PlayerRepository.h
metaserver/Database/: DataBase.cpp  DataBase.h  DatabaseConnection.cpp  DatabaseConnection.h  GameRepository.cpp  GameRepository.h  PlayerRepository.cpp  PlayerRepository.h
metaserver/Factory/: BaseHTTPHandler.cpp  BaseHTTPHandler.h  HandlerFactory.cpp  HandlerFactory.h
metaserver/Factory/Handlers/: ChangeNameHTTPHandler.cpp  ChangeNameHTTPHandler.h  LoginGamerHTTPHandler.cpp  LoginGamerHTTPHandler.h  RegisterNewGamerHTTPHandler.cpp  RegisterNewGamerHTTPHandler.h  SaveGameHTTPHandler.cpp  SaveGameHTTPHandler.h  StatisticGamerHTTPHandler.cpp  StatisticGamerHTTPHandler.h
